# myUPNP

./: CMakeLists.txt  README  UPNP.postman_collection.json  myUPNP.code-workspace  testUPNP.cpp  upnpDescription.txt
inc/: ssdp.h  upnpUtils.h
src/: ssdp.cpp  upnpUtils.cpp
